修复AI Service部署类型：从web改为worker
- 将AI Service类型从'web'改为'worker'
- AI Service是后台定时任务，不需要暴露HTTP端口
- 修复'no open ports detected'错误
- 修正startCommand为main.py（不是main_cloud.py）

--- a/render.yaml
+++ b/render.yaml
@@ -18,13 +18,13 @@ services:
       - key: FRONTEND_URL
         sync: false
 
-  # AI Service
-  - type: web
+  # AI Service (Background Worker)
+  - type: worker
     name: news-platform-ai-service
     env: python
     rootDir: ai-service
     buildCommand: pip install -r requirements.txt
-    startCommand: python src/main_cloud.py
+    startCommand: python src/main.py
     envVars:
       - key: USE_CLOUD_AI
         value: true
