--- a/ai-service/.env.cloud
+++ b/ai-service/.env.cloud
@@ -7,8 +7,8 @@
 # 是否使用云端AI（设置为true使用云端API，false使用本地Ollama）
 USE_CLOUD_AI=true
 
-# AI提供商选择: openai 或 claude
-AI_PROVIDER=openai
+# AI提供商选择: openai / claude / deepseek / kimi
+AI_PROVIDER=kimi
 
 # OpenAI配置（如果选择openai）
 OPENAI_API_KEY=your-openai-api-key-here
@@ -17,6 +17,14 @@ OPENAI_MODEL=gpt-3.5-turbo
 # Claude配置（如果选择claude）
 CLAUDE_API_KEY=your-claude-api-key-here
 CLAUDE_MODEL=claude-3-haiku-20240307
+
+# DeepSeek配置（如果选择deepseek）
+DEEPSEEK_API_KEY=your-deepseek-api-key-here
+DEEPSEEK_MODEL=deepseek-chat
+
+# Kimi配置（如果选择kimi）- Moonshot AI
+KIMI_API_KEY=your-kimi-api-key-here
+KIMI_MODEL=moonshot-v1-8k
 
 # ====================================
 # 数据库配置（使用云数据库）
